Made the error visible; Currently, it will display an actual error in the normal color, which just looks wrong. Currently, I want to make this a backend handled issue, wherein I am not sending a message like this in the first place. That should then have me saved from having to define a new class and styling for a error message. And now that I think about it, it's gotta send a message back regardless. So. Maybe I have to do it. Rats.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -399,6 +399,11 @@
   font-size: 19px;
   color: mintcream;
 }
+
+.gameTwoMessage {
+  color: paleturquoise;
+  font-size: 22px;
+}
 /* 850px, Home page: need to change instruction part */
 /* 800px, Home page: need to edit the locks and verifies, they are going off screen */
 /* 550px, nav bar: Should morph into bars*/
